packages/evershop/src/lib/middleware/tests/app/modules/error/pages/frontStore/errorHandlerTest/errorInSync.js
import jest from 'jest-mock';

export default jest.fn((request, response, delegates) => {
  throw new Error('Error in sync');
});
